--- a/P3.html
+++ b/P3.html
@@ -54,7 +54,7 @@
 </footer>
 
 <!-- Bouton retour -->
-<a href="noe_prez.html" class="back-button">
+<a href="index.html" class="back-button">
     <i class="fas fa-arrow-left"></i> <!-- Icône de flèche -->
     <span class="button-text">Retour à la page principale</span>
 </a>
