--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <!-- Lien vers le fichier de styles personnalisés -->
     <link href="styles.css" rel="stylesheet">
     <link href="responsive.css" rel="stylesheet">
+    <link rel="apple-touch-icon" href="images\NOE.jpg" />
+    <!-- 60x60 -->
+    <link rel="apple-touch-icon" sizes="76x76" href="images\NOE.jpg" />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="images\NOE.jpg"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="images\NOE.jpg"
+    />
     <title>Noé Marchal</title>
 </head>
 
