--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <!-- Lien vers le fichier de styles personnalisés -->
     <link href="styles.css" rel="stylesheet">
     <link href="responsive.css" rel="stylesheet">
-    <link rel="apple-touch-icon" href="images\NOE.jpg" />
+    <link rel="apple-touch-icon" href="images\NOE.png" />
     <!-- 60x60 -->
-    <link rel="apple-touch-icon" sizes="76x76" href="images\NOE.jpg" />
+    <link rel="apple-touch-icon" sizes="76x76" href="images\NOE.png" />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="images\NOE.jpg"
+      href="images\NOE.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="images\NOE.jpg"
+      href="images\NOE.png"
     />
     <title>Noé Marchal</title>
 </head>
