--- a/P2.html
+++ b/P2.html
@@ -18,7 +18,7 @@
     <!-- Lien vers le fichier de styles personnalisés -->
     <link href="styles.css" rel="stylesheet" />
     <link href="responsive.css" rel="stylesheet" />
-    <title>Projet 2 - Noé Marchal</title>
+    <title>Tag NFC - Noé Marchal</title>
   </head>
   <body>
     <header>
@@ -42,7 +42,7 @@
         <h3>Technologies utilisées :</h3>
         <ul>
           <li>Tag NFC : l'objet physique en lui même.</li>
-          <li>Pythob : Pour la programmation des tag NFC.</li>
+          <li>Python : Pour la programmation des tag NFC.</li>
           <li>
             un lecteur: Permet de lire l'information disponible depuis l'iphone
             6 sur IOS.
@@ -56,13 +56,6 @@
           <li>Suppression des taches répétitive.</li>
           <li>Interface réactive et adaptée aux mobiles.</li>
         </ul>
-
-        <h3>Photo du projet :</h3>
-        <img
-          src="https://via.placeholder.com/600x400"
-          alt="Photo du projet : "
-          style="width: 100%; max-width: 600px; border-radius: 10px"
-        />
       </section>
     </main>
 
