--- a/P3.html
+++ b/P3.html
@@ -18,7 +18,7 @@
     <!-- Lien vers le fichier de styles personnalisés -->
     <link href="styles.css" rel="stylesheet" />
     <link href="responsive.css" rel="stylesheet" />
-    <title>Projet 3 - Noé Marchal</title>
+    <title>Mes petits projets- Noé Marchal</title>
   </head>
   <body>
     <header>
@@ -30,49 +30,25 @@
 
     <main>
       <section id="projects">
-        <h2>Projet 3 : Application de gestion des tâches</h2>
+        <h2>Quelques petits projets que j'ai réalisés</h2>
         <p>
-          Voici une présentation de l'un de mes projets les plus récents : une
-          application web de gestion des tâches.
-        </p>
-        <p>
-          <strong>Description du projet :</strong> Cette application permet de
-          créer, modifier et supprimer des tâches avec une interface utilisateur
-          simple et intuitive. L'objectif est de rendre la gestion des tâches
-          plus facile et efficace pour les utilisateurs.
+          <strong>Mes petis projets :</strong> Ici vous trouverez une liste de mes petits projets réalisés.en HTML, CSS et JavaScript.
         </p>
 
-        <h3>Technologies utilisées :</h3>
+        <h3>Taptastic un clicker game évolué :</h3>
         <ul>
           <li>HTML/CSS : Pour la structure et le style de l'application.</li>
           <li>JavaScript : Pour la gestion dynamique des tâches.</li>
-          <li>Node.js : Backend pour la gestion des données en temps réel.</li>
+          <a href="https://noemarchal.github.io/Taptastic-/" target="_blank">Taptastic</a>
         </ul>
 
-        <h3>Fonctionnalités principales :</h3>
+        <h3>Tic Tac Toe futuriste :</h3>
         <ul>
-          <li>
-            Création de tâches avec titre, description et date d'échéance.
-          </li>
-          <li>Modification des tâches existantes.</li>
-          <li>Suppression des tâches.</li>
-          <li>Interface réactive et adaptée aux mobiles.</li>
+          <li></li>
+          <li>HTML/CSS : Pour la structure et le style de l'application.</li>
+          <li>JavaScript : Pour la gestion dynamique des tâches.</li>
+          <a href="https://noemarchal.github.io/tictactoe/" target="_blank">Tic Tac Toe</a>
         </ul>
-
-        <h3>Capture d'écran de l'application :</h3>
-        <img
-          src="https://via.placeholder.com/600x400"
-          alt="Capture d'écran de l'application"
-          style="width: 100%; max-width: 600px; border-radius: 10px"
-        />
-
-        <h3>Lien vers le code source :</h3>
-        <p>
-          Le code source est disponible sur
-          <a href="https://github.com/NoeMarchal/todolist" target="_blank"
-            >GitHub</a
-          >.
-        </p>
       </section>
     </main>
 
