--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
             <h2>Compétences</h2>
             <p>Voici quelques compétences que je maîtrise :</p>
             <ul>
-                <li>HTML, CSS, JS
+                <li>HTML, CSS, JS, ARDUINO, PYTHON
                     <!-- Barre de progression -->
                     <div class="progress-bar">
                         <div class="progress html"></div>
                         <span class="progress-percentage">75%</span>
                     </div>
                 </li>
-                <li>Autonomie
+                <li>Perséverance
                     <div class="progress-bar">
                         <div class="progress css"></div>
                         <span class="progress-percentage">80%</span>
@@ -99,7 +99,7 @@
             <ul>
                 <li><a href="P1.html"><strong>Serveur cloud :</strong></a></li>
                 <li><a href="P2.html"><strong>Tag NFC :</strong></a></li>
-                <li><a href="P3.html"><strong>Projet 3 :</strong></a></li>
+                <li><a href="P3.html"><strong>Mes petis projets :</strong></a></li>
             </ul>
         </section>
 
