--- a/P1.html
+++ b/P1.html
@@ -18,7 +18,7 @@
     <!-- Lien vers le fichier de styles personnalisés -->
     <link href="styles.css" rel="stylesheet" />
     <link href="responsive.css" rel="stylesheet" />
-    <title>Noé Marchal</title>
+    <title>Serveur cloud-Noé Marchal</title>
   </head>
   <body>
     <header>
@@ -54,13 +54,6 @@
           <li>Remplace les cloud payant et peu sécurisés</li>
           <li>Interface réactive et adaptée aux mobiles.</li>
         </ul>
-
-        <h3>Capture d'écran de l'application :</h3>
-        <img
-          src="https://i.ibb.co/6y2xzgb/nextcloud.png"
-          alt="Capture d'écran de l'application : "
-          style="width: 30%; max-width: 1600px; border-radius: 30px"
-        />
       </section>
     </main>
 
