--- a/P1.html
+++ b/P1.html
@@ -26,7 +26,7 @@
     </header>
 
     <!-- Bouton pour basculer en mode sombre -->
-    <button id="dark-mode-toggle">Mode Sombre</button>
+    <button id="dark-mode-toggle">🌓</button>
 
     <main>
       <section id="projects">
