--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
 
     <!-- Bouton pour basculer en mode sombre -->
-    <button id="dark-mode-toggle">Mode Sombre</button>
+    <button id="dark-mode-toggle">🌓</button>
 
     <!-- Contenu principal -->
     <main>
