--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             });
 
             // Changer le texte du bouton
-            toggleButton.textContent = document.body.classList.contains('dark-mode') ? 'Mode Clair' : 'Mode Sombre';
+            toggleButton.textContent = document.body.classList.contains('dark-mode') ? '🌓 ' : '🌓';
         });
     </script>
 
