--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				<br>
                 <input id="message" type="text" placeholder="Votre message"></input><br>
 				<br>
-                <button type="submit">Sent</button>
+                <button id="sent" type="submit">Sent</button>
             </form>
             <script src="https://smtpjs.com/v3/smtp.js"></script>
         </section>
