--- a/P2.html
+++ b/P2.html
@@ -60,7 +60,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2024 Noé Marchal. Tous droits réservés.</p>
+      <p>&copy; 2025 MoUst4ki. Tous droits réservés.</p>
     </footer>
 
     <!-- Bouton retour -->
