--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <!-- Pied de page -->
     <footer>
-        <p>&copy; 2024 Noé Marchal. Tous droits réservés.</p>
+        <p>&copy; 2025 MoUst4ki. Tous droits réservés.</p>
     </footer>
 
     <!-- Scripts -->
