--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <!-- Lien vers le fichier de styles personnalisés -->
     <link href="styles.css" rel="stylesheet" />
     <link href="responsive.css" rel="stylesheet" />
-    <link rel="apple-touch-icon" href="images\NOE.png" />
+    <link rel="apple-touch-icon" href="images\moi.jpg" />
     <!-- 60x60 -->
-    <link rel="apple-touch-icon" sizes="76x76" href="images\NOE.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="images\NOE.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="images\NOE.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="images\moi.jpg" />
+    <link rel="apple-touch-icon" sizes="120x120" href="images\moi.jpg" />
+    <link rel="apple-touch-icon" sizes="152x152" href="images\moi.jpg" />
     <title>Noé Marchal</title>
   </head>
 
@@ -57,12 +57,24 @@
         <a href="#skills" class="mobile-link">02. Stack</a>
         <a href="#projects" class="mobile-link">03. Projets</a>
         <a href="#socials" class="mobile-link">04. Réseaux</a>
-        <a href="#contact" class="mobile-link">05. Contact</a>
     </div>
 </header>
 
     <!-- Contenu principal -->
     <main>
+        <section id="home" class="hero-section">
+    <div class="hero-content">
+        <div class="profile-frame">
+            <img src="images/moi.jpg" alt="Noé Marchal" class="profile-img">
+            <div class="status-indicator"></div>
+        </div>
+        <h1>Salut, je suis <span class="text-highlight">Noé</span>.</h1>
+        <p class="hero-subtitle">
+            <span class="prompt-sign">~/</span> 
+            Étudiant <span class="typing-effect">Epitech & Maker</span><span class="cursor">|</span>
+        </p>
+    </div>
+</section>
       <!-- Section "À propos de moi" -->
 <section id="about">
     <div class="container">
@@ -323,68 +335,55 @@
       </section>
 
       <!-- Section des réseaux sociaux et école -->
-      <section id="socials">
-        <div class="container">
-          <h2>
-            <span class="tech-accent">@</span> Me Retrouver
-            <span class="tech-accent">_</span>
-          </h2>
-          <p class="skills-intro">Réseaux professionnels et personnels.</p>
+  <section id="socials">
+    <div class="container">
+        <h2><span class="tech-accent">@</span> Me Retrouver <span class="tech-accent">_</span></h2>
+        <p class="skills-intro">Réseaux professionnels et personnels.</p>
 
-          <div class="socials-grid">
-            <a
-              href="https://fr.linkedin.com/in/no%C3%A9-marchal-21221a27b"
-              target="_blank"
-              class="social-card linkedin"
-            >
-              <div class="social-icon">
-                <i class="fab fa-linkedin-in"></i>
-              </div>
-              <div class="social-info">
-                <h3>LinkedIn</h3>
-                <p>Parcours Pro & Réseau</p>
-              </div>
-              <div class="social-arrow">
-                <i class="fas fa-external-link-alt"></i>
-              </div>
+        <div class="socials-grid">
+            
+            <a href="https://fr.linkedin.com/in/no%C3%A9-marchal-21221a27b" target="_blank" class="social-card linkedin">
+                <div class="social-icon">
+                    <img src="images/moi.jpg" alt="Photo LinkedIn"> 
+                </div>
+                <div class="social-info">
+                    <h3>LinkedIn</h3>
+                    <p>Parcours Pro & Réseau</p>
+                </div>
+                <div class="social-arrow">
+                    <i class="fas fa-external-link-alt"></i>
+                </div>
             </a>
 
-            <a
-              href="https://github.com/MoUst4ki-tech"
-              target="_blank"
-              class="social-card github"
-            >
-              <div class="social-icon">
-                <i class="fab fa-github"></i>
-              </div>
-              <div class="social-info">
-                <h3>GitHub</h3>
-                <p>Code source & Projets</p>
-              </div>
-              <div class="social-arrow">
-                <i class="fas fa-code-branch"></i>
-              </div>
+            <a href="https://github.com/MoUst4ki-tech" target="_blank" class="social-card github">
+                <div class="social-icon">
+                    <img src="images/moi.jpeg" alt="Photo GitHub">
+                </div>
+                <div class="social-info">
+                    <h3>GitHub</h3>
+                    <p>Code source & Projets</p>
+                </div>
+                <div class="social-arrow">
+                    <i class="fas fa-code-branch"></i>
+                </div>
             </a>
 
-            <a
-              href="https://www.instagram.com/noe__marchal"
-              target="_blank"
-              class="social-card instagram"
-            >
-              <div class="social-icon">
-                <i class="fab fa-instagram"></i>
-              </div>
-              <div class="social-info">
-                <h3>Instagram</h3>
-                <p>Lifestyle & Passions</p>
-              </div>
-              <div class="social-arrow">
-                <i class="fas fa-camera-retro"></i>
-              </div>
+            <a href="https://www.instagram.com/noe__marchal" target="_blank" class="social-card instagram">
+                <div class="social-icon">
+                    <img src="images/insta.png" alt="Photo Instagram">
+                </div>
+                <div class="social-info">
+                    <h3>Instagram</h3>
+                    <p>Lifestyle & Passions</p>
+                </div>
+                <div class="social-arrow">
+                    <i class="fas fa-camera-retro"></i>
+                </div>
             </a>
-          </div>
+
         </div>
-      </section>
+    </div>
+</section>
  <div class="cv-section">
     <a href="CV.pdf" download="CV.pdf" class="tech-button">
         <div class="btn-icon-box">
