--- a/index.html
+++ b/index.html
@@ -319,15 +319,26 @@
                   expérimenter avec le DOM et JS.
                 </p>
               </div>
+<a href="P4.html" class="project-card">
+              <div class="project-header">
+                <div class="folder-icon"><i class="fas fa-wine-bottle"></i></div>
+                <div class="project-title-group">
+                  <h3>epicuvin_manager</h3>
+                  <span class="status-badge" style="color: #800020; background-color: #fadbd8;">v2.0</span>
+                </div>
+              </div>
+              <div class="project-body">
+                <p>
+                  Application de gestion de cave à vin connectée. Authentification, inventaire temps réel et API Google Script.
+                </p>
+              </div>
               <div class="project-footer">
                 <div class="tech-stack-mini">
-                  <span>HTML5</span>
-                  <span>CSS3</span>
                   <span>JS</span>
+                  <span>API</span>
+                  <span>CSS3</span>
                 </div>
-                <span class="link-arrow"
-                  ><i class="fas fa-arrow-right"></i
-                ></span>
+                <span class="link-arrow"><i class="fas fa-arrow-right"></i></span>
               </div>
             </a>
           </div>
@@ -385,7 +396,7 @@
     </div>
 </section>
  <div class="cv-section">
-    <a href="CV.pdf" download="CV.pdf" class="tech-button">
+    <a href="CV_Noé_Marchal.pdf" download="CV.pdf" class="tech-button">
         <div class="btn-icon-box">
             <i class="fas fa-file-pdf"></i>
         </div>
@@ -417,6 +428,7 @@
                 <li><a href="#about">À propos</a></li>
                 <li><a href="#skills">Compétences</a></li>
                 <li><a href="#projects">Projets</a></li>
+                <li><a href="#socials">Résaux</a></li>
             </ul>
         </div>
 
