--- a/cv.html
+++ b/cv.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Consolas:wght@400;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --bg-color: #1e1e1e; /* Fond sombre Epitech style */
+            --bg-color: #1e1e1e;
             --sidebar-color: #252526;
             --text-color: #d4d4d4;
-            --accent-color: #4a90e2; /* Bleu Tech */
+            --accent-color: #4a90e2;
             --border-color: #3e3e42;
         }
 
@@ -31,131 +31,129 @@
             padding: 20px;
         }
 
-        /* Format A4 */
+        /* Format A4 Strict */
         .page {
             width: 210mm;
             height: 297mm;
             background-color: var(--bg-color);
             color: var(--text-color);
             display: grid;
-            grid-template-columns: 30% 70%;
+            grid-template-columns: 28% 72%;
             box-shadow: 0 0 20px rgba(0,0,0,0.5);
             position: relative;
-            overflow: hidden;
+            overflow: hidden; /* Empêche le scroll/débordement */
         }
 
-        /* Colonne de Gauche (Sidebar) */
+        /* Sidebar - Espacements réduits */
         .sidebar {
             background-color: var(--sidebar-color);
-            padding: 30px 20px;
+            padding: 20px 15px;
             border-right: 1px solid var(--border-color);
             display: flex;
             flex-direction: column;
-            gap: 25px;
+            gap: 18px; /* Réduit de 25px */
         }
 
         .profile-container {
             text-align: center;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
         }
 
         .profile-img {
-            width: 120px;
-            height: 120px;
+            width: 100px; /* Réduit de 120px */
+            height: 100px;
             border-radius: 50%;
             border: 3px solid var(--accent-color);
             object-fit: cover;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
 
-        /* Titres Sidebar */
         .sidebar h2 {
             font-family: 'Consolas', monospace;
             color: #fff;
-            font-size: 1.1em;
+            font-size: 1.0em;
             border-bottom: 1px solid var(--border-color);
-            padding-bottom: 5px;
-            margin-bottom: 15px;
+            padding-bottom: 4px;
+            margin-bottom: 10px;
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 8px;
         }
 
-        .sidebar h2 i { color: var(--accent-color); font-size: 0.9em; }
+        .sidebar h2 i { color: var(--accent-color); font-size: 0.85em; }
 
-        /* Listes Sidebar */
         .info-list, .skill-list {
             list-style: none;
-            font-size: 0.9em;
+            font-size: 0.85em;
         }
 
         .info-list li {
-            margin-bottom: 12px;
+            margin-bottom: 8px;
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 8px;
             color: #ccc;
         }
 
-        .info-list i { color: var(--accent-color); width: 15px; }
+        .info-list i { color: var(--accent-color); width: 14px; text-align: center; }
 
         .skill-tag {
             display: inline-block;
             background: #333;
-            padding: 4px 8px;
+            padding: 3px 7px;
             border-radius: 4px;
-            margin-bottom: 6px;
+            margin-bottom: 4px;
             font-family: 'Consolas', monospace;
-            font-size: 0.85em;
+            font-size: 0.8em;
             border: 1px solid var(--border-color);
         }
 
-        /* Colonne de Droite (Main) */
+        /* Main Content - Optimisation de la hauteur */
         .main-content {
-            padding: 40px 30px;
+            padding: 25px 30px; /* Réduit de 40px */
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between; /* Aide à équilibrer sur la page */
         }
 
-        /* Header Nom */
         .header-name {
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             border-bottom: 2px solid var(--border-color);
-            padding-bottom: 20px;
+            padding-bottom: 15px;
         }
 
         .header-name h1 {
             font-family: 'Consolas', monospace;
             color: #fff;
-            font-size: 2.8em;
+            font-size: 2.5em;
             line-height: 1;
             margin-bottom: 5px;
         }
 
         .header-name .subtitle {
             color: var(--accent-color);
-            font-size: 1.2em;
+            font-size: 1.1em;
             font-weight: 600;
             font-family: 'Consolas', monospace;
         }
 
-        /* Sections Principales */
         .section-title {
             display: flex;
             align-items: center;
             gap: 10px;
             color: #fff;
             font-family: 'Consolas', monospace;
-            font-size: 1.4em;
-            margin-bottom: 20px;
-            margin-top: 25px;
+            font-size: 1.25em;
+            margin-bottom: 15px;
+            margin-top: 15px;
         }
 
         .section-title span { color: var(--accent-color); }
 
-        /* Timeline Items */
         .timeline-item {
             position: relative;
             padding-left: 20px;
-            margin-bottom: 20px;
+            margin-bottom: 15px; /* Réduit pour gagner de la place */
             border-left: 2px solid var(--border-color);
         }
 
@@ -175,49 +173,40 @@
             display: flex;
             justify-content: space-between;
             align-items: baseline;
-            margin-bottom: 4px;
+            margin-bottom: 2px;
         }
 
         .item-title {
             color: #fff;
             font-weight: 700;
-            font-size: 1.05em;
+            font-size: 1.0em;
         }
 
         .item-date {
             font-family: 'Consolas', monospace;
-            font-size: 0.85em;
+            font-size: 0.8em;
             color: var(--accent-color);
             background: #252526;
-            padding: 2px 6px;
+            padding: 1px 5px;
             border-radius: 4px;
         }
 
         .item-subtitle {
             color: #aaa;
             font-style: italic;
-            font-size: 0.95em;
-            margin-bottom: 5px;
+            font-size: 0.9em;
+            margin-bottom: 3px;
         }
 
         .item-desc {
-            font-size: 0.9em;
+            font-size: 0.85em;
             color: #ccc;
-            line-height: 1.4;
+            line-height: 1.3;
         }
 
-        /* Impression */
         @media print {
-            body { 
-                background: none; 
-                padding: 0; 
-                margin: 0;
-            }
-            .page {
-                width: 100%;
-                height: 100%;
-                box-shadow: none;
-            }
+            body { background: none; padding: 0; margin: 0; }
+            .page { width: 210mm; height: 297mm; box-shadow: none; }
         }
     </style>
 </head>
@@ -253,14 +242,15 @@
                 <h2><i class="fas fa-user-check"></i> SOFT SKILLS</h2>
                 <span class="skill-tag">Travail d'équipe</span>
                 <span class="skill-tag">Persévérance</span>
-                <span class="skill-tag">Leadership (Délégué)</span>
+                <span class="skill-tag">Leadership</span>
                 <span class="skill-tag">Empathie</span>
             </section>
 
             <section>
                 <h2><i class="fas fa-language"></i> LANGUES</h2>
                 <ul class="info-list">
-                    <li>Anglais Technique (B2)</li>
+                    <li>Anglais Tech (B2)</li>
+                    <li>Immersion Inde (1 mois)</li>
                     <li>Français (Natif)</li>
                 </ul>
             </section>
@@ -269,14 +259,13 @@
                 <h2><i class="fas fa-heart"></i> HOBBIES</h2>
                 <ul class="info-list">
                     <li><i class="fas fa-basketball-ball"></i> Basket (9 ans)</li>
-                    <li><i class="fas fa-water"></i> Kite Surf / Sports d'eau</li>
-                    <li><i class="fas fa-running"></i> Athlétisme (2 ans)</li>
+                    <li><i class="fas fa-water"></i> Kite Surf</li>
+                    <li><i class="fas fa-running"></i> Athlétisme</li>
                 </ul>
             </section>
         </aside>
 
         <main class="main-content">
-            
             <header class="header-name">
                 <h1>Noé MARCHAL</h1>
                 <div class="subtitle">Étudiant @ Epitech | Passionné de Tech</div>
@@ -284,14 +273,13 @@
 
             <section>
                 <div class="section-title"><span>./</span> EDUCATION</div>
-                
                 <div class="timeline-item">
                     <div class="item-header">
                         <span class="item-title">Programme Grande École (1ère année)</span>
-                        <span class="item-date">Sept. 2025 - Présent</span>
+                        <span class="item-date">Depuis 09/2025</span>
                     </div>
                     <div class="item-subtitle">Epitech Technology, Lille</div>
-                    <div class="item-desc">Pédagogie par projet. Piscine C, Unix System Programming et développement logiciel intensif.</div>
+                    <div class="item-desc">Piscine C, Unix System Programming et développement logiciel intensif.</div>
                 </div>
 
                 <div class="timeline-item">
@@ -305,39 +293,38 @@
 
                 <div class="timeline-item">
                     <div class="item-header">
-                        <span class="item-title">1ère & 2nde STI2D (Option ESICIT)</span>
+                        <span class="item-title">1ère & 2nde STI2D</span>
                         <span class="item-date">2022 - 2024</span>
                     </div>
                     <div class="item-subtitle">Lycée Privé Ozanam, Lille</div>
-                    <div class="item-desc">Délégué de classe sur les deux années.</div>
+                    <div class="item-desc">Option ESICIT. Délégué de classe.</div>
                 </div>
             </section>
 
             <section>
                 <div class="section-title"><span>./</span> EXPERIENCE_PRO</div>
-
                 <div class="timeline-item">
                     <div class="item-header">
                         <span class="item-title">Serveur & Plongeur</span>
-                        <span class="item-date">Été 2024 & Avril 2025</span>
+                        <span class="item-date">2024 - 2025</span>
                     </div>
                     <div class="item-subtitle">Restaurant "Chez Max", Wissant</div>
-                    <div class="item-desc">Service en salle, gestion du stress en coup de feu, travail d'équipe et relation client.</div>
+                    <div class="item-desc">Service en salle, gestion du stress et relation client.</div>
                 </div>
 
                 <div class="timeline-item">
                     <div class="item-header">
                         <span class="item-title">Stage Informatique (IT)</span>
-                        <span class="item-date">Juin 2023</span>
+                        <span class="item-date">06/2023</span>
                     </div>
                     <div class="item-subtitle">SCC France</div>
-                    <div class="item-desc">Immersion en entreprise de services numériques. Découverte de l'infrastructure, maintenance et support.</div>
+                    <div class="item-desc">Découverte de l'infrastructure, maintenance et support.</div>
                 </div>
 
                 <div class="timeline-item">
                     <div class="item-header">
                         <span class="item-title">Crêpier & Gaufreur</span>
-                        <span class="item-date">Juillet 2024</span>
+                        <span class="item-date">07/2024</span>
                     </div>
                     <div class="item-subtitle">Crêperie "Caline and GO", Wissant</div>
                     <div class="item-desc">Préparation, vente directe et gestion de la caisse.</div>
@@ -346,26 +333,24 @@
 
             <section>
                 <div class="section-title"><span>./</span> ENGAGEMENT_SOCIAL</div>
-
                 <div class="timeline-item">
                     <div class="item-header">
                         <span class="item-title">Bénévolat & Service</span>
                         <span class="item-date">2022 - 2023</span>
                     </div>
-                    <div class="item-subtitle">Pèlerinage à Lourdes (Train Bleu/Vert)</div>
+                    <div class="item-subtitle">Pèlerinage à Lourdes</div>
                     <div class="item-desc">Service auprès des personnes malades et accompagnement humain.</div>
                 </div>
 
-                <div class="timeline-item">
+                <div class="timeline-item" style="margin-bottom: 0;">
                     <div class="item-header">
                         <span class="item-title">Stage Associatif</span>
-                        <span class="item-date">Janvier 2023</span>
+                        <span class="item-date">01/2023</span>
                     </div>
                     <div class="item-subtitle">EHPAD de Bondues</div>
                     <div class="item-desc">Animation et aide aux résidents. Développement de l'empathie.</div>
                 </div>
             </section>
-
         </main>
     </div>
 
